[FIX] missing packages and config added for Tailwind

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/styles.css" type="text/css">
   <title>Boilerplate</title>
 </head>
 <body>
   <h1>Hi, i'm a simple Express boilerplate</h1>
+  <div class="container mx-auto bg-blue-500">
+    hola
+  </div>
 </body>
 </html>
