[ADD] Favicon Added

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="/css/styles.css" type="text/css">
   <link rel="stylesheet" href="/css/base.css" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
   <script src="https://kit.fontawesome.com/35e9411073.js" crossorigin="anonymous"></script>
+  <link rel="manifest" href="/site.webmanifest">
 
   <title>Url-shortener</title>
 </head>
